# apollo_perception_ros

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md
src/perception/apollo_perception_ros/: CMakeLists.txt  README.md  package.xml
src/perception/apollo_perception_ros/config/: async_fusion_config.pb.txt  calibration.yaml  cnn_segmentation_config.pb.txt  modest_radar_detector_config.pb.txt  roi_filter_config.pb.txt  tracker_config.pb.txt
src/perception/apollo_perception_ros/config/calib/: short_camera_intrinsics.yaml
src/perception/apollo_perception_ros/config/camera/: geometry_camera_converter_config.pb.txt  yolo_camera_detector_config.pb.txt
src/perception/apollo_perception_ros/include/camera/common/: camera.h  cnn_adapter.h  lane_object.h  projector.h  util.h  visual_object.h
src/perception/apollo_perception_ros/include/camera/converter/: geometry_camera_converter.h
src/perception/apollo_perception_ros/include/camera/dummy/: dummy_algorithms.h
src/perception/apollo_perception_ros/include/camera/filter/: object_camera_extended_kalman_filter.h  object_camera_filter.h
src/perception/apollo_perception_ros/include/camera/interface/: base_camera_converter.h  base_camera_detector.h  base_camera_filter.h  base_camera_tracker.h  base_camera_transformer.h  base_lane_post_processor.h
src/perception/apollo_perception_ros/include/camera/motion/: plane_motion.h
src/perception/apollo_perception_ros/include/camera/proto/: geometry_camera_converter_config.pb.cc  geometry_camera_converter_config.pb.h  geometry_camera_converter_config.proto  lane_post_process_config.pb.cc  lane_post_process_config.pb.h  lane_post_process_config.proto  tracking_feature.pb.cc  tracking_feature.pb.h  tracking_feature.proto  yolo.pb.cc  yolo.pb.h  yolo.proto  yolo_camera_detector_config.pb.cc  yolo_camera_detector_config.pb.h  yolo_camera_detector_config.proto
src/perception/apollo_perception_ros/include/camera/tracker/: base_affinity_tracker.h  cascaded_camera_tracker.h  cascaded_camera_tracker_util.h
src/perception/apollo_perception_ros/include/camera/transformer/: flat_camera_transformer.h
src/perception/apollo_perception_ros/include/camera/visualizer/: base_visualizer.h  frame_content.h  gl_fusion_visualizer.h  glfw_fusion_viewer.h
src/perception/apollo_perception_ros/include/common/: config_gflags.h  convex_hullxy.h  object.h  object_supplement.h  pcl_types.h  perception_gflags.h  sensor_raw_frame.h  types.h
src/perception/apollo_perception_ros/include/config_manager/: calibration_config_manager.h
src/perception/apollo_perception_ros/include/cuda_util/: block_uf.h  connected_component_gpu.h  network.h  region_output.h  undistortion.h  util.h
src/perception/apollo_perception_ros/include/fusion/async_fusion/: async_fusion.h
src/perception/apollo_perception_ros/include/fusion/interface/: base_fusion.h
src/perception/apollo_perception_ros/include/fusion/probabilistic_fusion/: pbf_hm_track_object_matcher.h  pbf_imf_fusion.h  pbf_sensor.h  pbf_sensor_manager.h  pbf_sensor_monitor.h  pbf_sensor_object.h  pbf_track.h  pbf_track_manager.h  pbf_track_object_distance.h  probabilistic_fusion.h
src/perception/apollo_perception_ros/include/fusion/proto/: async_fusion_config.pb.cc  async_fusion_config.pb.h  async_fusion_config.proto  probabilistic_fusion_config.pb.h
src/perception/apollo_perception_ros/include/lidar/object_builder/: min_box.h
src/perception/apollo_perception_ros/include/lidar/object_filter/: low_object_filter.h
src/perception/apollo_perception_ros/include/lidar/proto/: cnn_segmentation_config.pb.cc  cnn_segmentation_config.pb.h  cnn_segmentation_config.proto  cnnseg.pb.cc  cnnseg.pb.h  cnnseg.proto  low_object_filter_config.pb.cc  low_object_filter_config.pb.h  low_object_filter_config.proto  roi_filter_config.pb.cc  roi_filter_config.pb.h  roi_filter_config.proto  sequence_type_fuser_config.pb.cc  (+5 more)
src/perception/apollo_perception_ros/include/perception_yx/: camera_process.h  lidar_process.h  obstacle_fusion.h  perception_yx.h
src/perception/apollo_perception_ros/include/proto/: can_card_parameter.pb.cc  can_card_parameter.pb.h  can_card_parameter.proto  error_code.pb.cc  error_code.pb.h  error_code.proto  geometry.pb.cc  geometry.pb.h  geometry.proto  header.pb.cc  header.pb.h  header.proto  perception_obstacle.pb.cc  perception_obstacle.pb.h  perception_obstacle.proto  sensor_canbus_conf.pb.cc  sensor_canbus_conf.pb.h  sensor_canbus_conf.proto
src/perception/apollo_perception_ros/include/util/: aabox2d.h  box2d.h  disjoint_set.h  extended_kalman_filter.h  file.h  geometry_util.h  graph_util.h  hungarian_bigraph_matcher.h  kalman_filter.h  line_segment2d.h  log.h  math_utils.h  matrix_operations.h  mutex.h  polygon2d.h  pose_util.h  singleton.h  string_util.h  time.h  time_util.h  timer.h  util.h  vec2d.h
src/perception/apollo_perception_ros/launch/: perception_yx_detect.launch
src/perception/apollo_perception_ros/scripts/: bag_to_images.py
src/perception/apollo_perception_ros/src/: CMakeLists.txt  camera_process.cc  lidar_process.cpp  obstacle_fusion.cc  perception_yx.cpp  perception_yx_node.cpp
src/perception/apollo_perception_ros/src/camera/: CMakeLists.txt
src/perception/apollo_perception_ros/src/common/: config_gflags.cc  object.cc  object_supplement.cc  perception_gflags.cc  types.cc
src/perception/apollo_perception_ros/src/config_manager/: calibration_config_manager.cc
src/perception/apollo_perception_ros/src/cuda_util/: block_uf.cu  connected_component_gpu.cu  network.cu  region_output.cc  region_output.cu  undistortion.cu  util.cu
src/perception/apollo_perception_ros/src/fusion/: CMakeLists.txt
src/perception/apollo_perception_ros/src/lidar/: CMakeLists.txt
src/perception/apollo_perception_ros/src/radar/: CMakeLists.txt
src/perception/apollo_perception_ros/src/util/: aabox2d.cc  box2d.cc  file.cc  geometry_util.cc  graph_util.cc  hungarian_bigraph_matcher.cc  line_segment2d.cc  math_utils.cc  matrix_operations.cc  polygon2d.cc  pose_util.cc  string_util.cc  timer.cc  util.cc  vec2d.cc
(+160 files in other folders)
