<package>

  <name>apollo_perception_ros</name>
  <version>0.0.1</version>
  <description>
  Object detection / tracking / fusion based on Apollo perception modules in r3.0.0
  </description>
  <maintainer email="cedricxie@gmail.com">Yuesong Xie</maintainer>
  <author>Yuesong Xie</author>
  <license>TODO</license>
  <url type="website">http://www.xieyuesong.com/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roslaunch</build_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>
